# MONClient

./: .gitignore  CMakeLists.txt  CMakeLists.txt.txt  README.md
assets/Placeholders/systems/: README.md
assets/data/: items.json  system_roadmap.json
assets/maps/: Dirt_05-128x128.tsx  Dirt_09-128x128.tsx  Dirt_19-128x128.tsx  Grass_25.tsx  MON-MAPS-project.tiled-session  Overworld - Forest - Thick 256x144.tsx  Overworld - Water - Flat 256x128.tsx  StarterZone.tmx  StarterZones.tmx  Stone_13-128x128.tsx  collision.csv  ground.csv  testmap.tmx  testmaps.tmx  tiles.tsx  tree.tsx  untitled.tiled-session  x256_Autumn_Body_Spritesheet.tsx
docs/: SYSTEMS_CHECKLIST.md
glad/include/glad/: glad.h
glad/src/: glad.c
src/: Camera2d.cpp  Camera2d.h  GameSystems.cpp  GameSystems.h  MapObjects.h  Player.cpp  Player.h  PlayerController.cpp  PlayerController.h  RenderQueue.h  SpriteRenderer.cpp  SpriteRenderer.h  SpriteSheet.h  TileMap.cpp  TileMap.h  TileMath.h  TileResolver.cpp  TileResolver.h  TileSet.cpp  TileSet.h  TmxLoader.cpp  TmxLoader.h  main.cpp
